Removed / on css file on html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>For The Makers</title>
-		<link rel="stylesheet" href="main.css/"/>
+		<link rel="stylesheet" href="main.css"/>
 	</head>
 	<body>
 		<header>
