--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@
 			<img src="images/project4.jpg"/>
 			<p>Tassles and Headbands</p>
 		</div>
-		
 	</div>
+		<footer>
+			<p id="copyright">© 2013 for the makers</p>
+			<p id="footer_nav">about | terms of service | how it works | faq</p>
+		</footer>
 
 	</body>
 
