--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 				<img src="images/feature.jpg"/>
 			</div>
 		</div>
+		<div id="projects">
 		<div class="img_container">
 			<img src="images/project1.jpg"/>
 			<p>Tassles and Headbands</p>
@@ -52,6 +53,7 @@
 		<div class="img_container">
 			<img src="images/project4.jpg"/>
 			<p>Tassles and Headbands</p>
+		</div>
 		</div>
 	</div>
 		<footer>
