--- a/index.html
+++ b/index.html
@@ -38,23 +38,49 @@
 			</div>
 		</div>
 		<div id="projects">
-		<div class="img_container">
-			<img src="images/project1.jpg"/>
-			<p>Tassles and Headbands</p>
+			<div class="img_container">
+				<img src="images/project1.jpg"/>
+				<p>Tassles and Headbands</p>
+			</div>
+			<div class="img_container">
+				<img src="images/project2.jpg"/>
+				<p>Tassles and Headbands</p>
+			</div>
+			<div class="img_container">
+				<img src="images/project3.jpg"/>
+				<p>Tassles and Headbands</p>
+			</div>
+			<div class="img_container">
+				<img src="images/project4.jpg"/>
+				<p>Tassles and Headbands</p>
+			</div>
 		</div>
-		<div class="img_container">
-			<img src="images/project2.jpg"/>
-			<p>Tassles and Headbands</p>
-		</div>
-		<div class="img_container">
-			<img src="images/project3.jpg"/>
-			<p>Tassles and Headbands</p>
-		</div>
-		<div class="img_container">
-			<img src="images/project4.jpg"/>
-			<p>Tassles and Headbands</p>
-		</div>
-		</div>
+		<div id="blog">
+			<div class="blog_post">
+					<img src="images/blog1.jpg"/>
+					<div class="blog_text">
+						<h3>Look Book</h3>
+						<p>Sedona Sunset</p>
+					</div>
+				</div>
+				<div class="blog_post">
+					<img src="images/blog2.jpg"/>
+						<div class="blog_text">
+							<h3>Look Book</h3>
+							<p>Sedona Sunset</p>
+						</div>
+				</div>
+					<div class="blog_post">
+						<img src="images/blog3.jpg"/>
+							<div class="blog_text">
+								<h3>Look Book</h3>
+								<p>Sedona Sunset</p>
+							</div>
+					</div>
+				</div>	
+			
+					
+			
 	</div>
 		<footer>
 			<p id="copyright">© 2013 for the makers</p>
