more blog stuff

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 				<p>Tassles and Headbands</p>
 			</div>
 		</div>
+		<div class="divider">
+			<h3>From The Source</h3>
+			<hr>
+		</div>
 		<div id="blog">
 			<div class="blog_post">
 					<img src="images/blog1.jpg"/>
@@ -77,6 +81,27 @@
 								<p>Sedona Sunset</p>
 							</div>
 					</div>
+							<div class="blog_post">
+									<img src="images/blog1.jpg"/>
+									<div class="blog_text">
+										<h3>Look Book</h3>
+										<p>Sedona Sunset</p>
+									</div>
+								</div>
+								<div class="blog_post">
+									<img src="images/blog2.jpg"/>
+										<div class="blog_text">
+											<h3>Look Book</h3>
+											<p>Sedona Sunset</p>
+										</div>
+								</div>
+									<div class="blog_post">
+										<img src="images/blog3.jpg"/>
+											<div class="blog_text">
+												<h3>Look Book</h3>
+												<p>Sedona Sunset</p>
+											</div>
+									</div>
 				</div>	
 			
 					
