--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
 	<body>
 		<header>
 			<ul>
-				<li>how it works</li>
-				<li>about us</li>
-				<li>cart</li>
+				<li><a href="http://www.marisheibley.com/">how it works</li>
+				<li><a href="http://www.marisheibley.com/">about us</li>
+				<li><a href="http://www.marisheibley.com/">cart</li>
 			</ul>
 		</header>
 	<div id="container">
+		<div class="logo">
 		<img src="images/logo.svg"/>
+		</div>
 		<nav>
 			<ul>
-				<li>shop</li>
-				<li>collections</li>
-				<li>tutorials</li>
-				<li>the sources</li>
+				<li><a href="http://www.marisheibley.com/">shop</li>
+				<li><a href="http://www.marisheibley.com/">collections</li>
+				<li><a href="http://www.marisheibley.com/">tutorials</li>
+				<li><a href="http://www.marisheibley.com/">The source</li>
 			</ul>
 		</nav>
 		<div id="feature_container">
@@ -30,7 +32,7 @@
 					<p>CREATE DIY PIECES YOU'LL LOVE NOW AND FOR SEASONS TO COME.</p>
 				</div>
 				<div id="button">
-					<p>view collection</p>
+					<a href="http://www.marisheibley.com/">view collection</a>
 				</div>
 			</div>
 			<div id="feature_image">
@@ -55,10 +57,7 @@
 				<p>Tassles and Headbands</p>
 			</div>
 		</div>
-		<div class="divider">
-			<h3>From The Source</h3>
-			<hr>
-		</div>
+		<hr>
 		<div id="blog">
 			<div class="blog_post">
 					<img src="images/blog1.jpg"/>
@@ -102,15 +101,15 @@
 												<p>Sedona Sunset</p>
 											</div>
 									</div>
-				</div>	
-			
-					
-			
-	</div>
+				</div>
 		<footer>
 			<p id="copyright">© 2013 for the makers</p>
 			<p id="footer_nav">about | terms of service | how it works | faq</p>
 		</footer>
+			
+					
+			
+	</div>
 
 	</body>
 
