Everything has links

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 		</div>
 		<nav>
 			<ul>
-				<li><a href="http://www.marisheibley.com/">shop</li>
-				<li><a href="http://www.marisheibley.com/">collections</li>
-				<li><a href="http://www.marisheibley.com/">tutorials</li>
-				<li><a href="http://www.marisheibley.com/">The source</li>
+				<li><a href="http://www.marisheibley.com/">shop</a></li>
+				<li><a href="http://www.marisheibley.com/">collections</a></li>
+				<li><a href="http://www.marisheibley.com/">tutorials</a></li>
+				<li><a href="http://www.marisheibley.com/">The source</a></li>
 			</ul>
 		</nav>
 		<div id="feature_container">
@@ -41,64 +41,64 @@
 		</div>
 		<div id="projects">
 			<div class="img_container">
-				<img src="images/project1.jpg"/>
-				<p>Tassles and Headbands</p>
+				<a href="http://www.marisheibley.com/"><img src="images/project1.jpg"/></a>
+				<p><a href="http://www.marisheibley.com/">The Stahl House</a></p>
 			</div>
 			<div class="img_container">
-				<img src="images/project2.jpg"/>
-				<p>Tassles and Headbands</p>
+				<a href="http://www.marisheibley.com/"><img src="images/project2.jpg"/></a>
+				<p><a href="http://www.marisheibley.com/">Los Angeles</a></p>
 			</div>
 			<div class="img_container">
-				<img src="images/project3.jpg"/>
-				<p>Tassles and Headbands</p>
+				<a href="http://www.marisheibley.com/"><img src="images/project3.jpg"/></a>
+				<p><a href="http://www.marisheibley.com/">California</a></p>
 			</div>
 			<div class="img_container">
-				<img src="images/project4.jpg"/>
-				<p>Tassles and Headbands</p>
+				<a href="http://www.marisheibley.com/"><img src="images/project4.jpg"/></a>
+				<p><a href="http://www.marisheibley.com/">Century City</a></p>
 			</div>
 		</div>
 		<hr>
 		<div id="blog">
 			<div class="blog_post">
-					<img src="images/blog1.jpg"/>
+					<a href="http://www.marisheibley.com/"><img src="images/blog1.jpg"/></a>
 					<div class="blog_text">
-						<h3>Look Book</h3>
-						<p>Sedona Sunset</p>
+						<h3><a href="http://www.marisheibley.com/">Look Book</a></h3>
+						<p><a href="http://www.marisheibley.com/">Sedona Sunset</a></p>
 					</div>
 				</div>
 				<div class="blog_post">
-					<img src="images/blog2.jpg"/>
+					<a href="http://www.marisheibley.com/"><img src="images/blog2.jpg"/></a>
 						<div class="blog_text">
-							<h3>Look Book</h3>
-							<p>Sedona Sunset</p>
+							<h3><a href="http://www.marisheibley.com/">Look Book</a></h3>
+							<p><a href="http://www.marisheibley.com/">Sedona Sunset</a></p>
 						</div>
 				</div>
 					<div class="blog_post">
-						<img src="images/blog3.jpg"/>
+						<a href="http://www.marisheibley.com/"><img src="images/blog3.jpg"/></a>
 							<div class="blog_text">
-								<h3>Look Book</h3>
-								<p>Sedona Sunset</p>
+								<h3><a href="http://www.marisheibley.com/">Look Book</a></h3>
+								<p><a href="http://www.marisheibley.com/">edona Sunset</a></p>
 							</div>
 					</div>
 							<div class="blog_post">
-									<img src="images/blog4.jpg"/>
+									<a href="http://www.marisheibley.com/"><img src="images/blog4.jpg"/></a>
 									<div class="blog_text">
-										<h3>Look Book</h3>
-										<p>Sedona Sunset</p>
+										<h3><a href="http://www.marisheibley.com/">Look Book</a></h3>
+										<p><a href="http://www.marisheibley.com/">Sedona Sunset</a></p>
 									</div>
 								</div>
 								<div class="blog_post">
-									<img src="images/blog5.jpg"/>
+									<a href="http://www.marisheibley.com/"><img src="images/blog5.jpg"/></a>
 										<div class="blog_text">
-											<h3>Look Book</h3>
-											<p>Sedona Sunset</p>
+											<h3><a href="http://www.marisheibley.com/">Look Book</a></h3>
+											<p><a href="http://www.marisheibley.com/">Sedona Sunset</a></p>
 										</div>
 								</div>
 									<div class="blog_post">
-										<img src="images/blog6.jpg"/>
+										<a href="http://www.marisheibley.com/"><img src="images/blog6.jpg"/></a>
 											<div class="blog_text">
-												<h3>Look Book</h3>
-												<p>Sedona Sunset</p>
+												<h3><a href="http://www.marisheibley.com/">Look Book</a></h3>
+												<p>S<a href="http://www.marisheibley.com/">edona Sunset</a></p>
 											</div>
 									</div>
 				</div>
