--- a/index.html
+++ b/index.html
@@ -62,43 +62,43 @@
 			<div class="blog_post">
 					<a href="http://www.marisheibley.com/"><img src="images/blog1.jpg"/></a>
 					<div class="blog_text">
-						<h3><a href="http://www.marisheibley.com/">Look Book</a></h3>
-						<p><a href="http://www.marisheibley.com/">Sedona Sunset</a></p>
+						<h3><a href="http://www.marisheibley.com/">Bourbon</a></h3>
+						<p><a href="http://www.marisheibley.com/">Makers Mark</a></p>
 					</div>
 				</div>
 				<div class="blog_post">
 					<a href="http://www.marisheibley.com/"><img src="images/blog2.jpg"/></a>
 						<div class="blog_text">
-							<h3><a href="http://www.marisheibley.com/">Look Book</a></h3>
-							<p><a href="http://www.marisheibley.com/">Sedona Sunset</a></p>
+							<h3><a href="http://www.marisheibley.com/">Scotch</a></h3>
+							<p><a href="http://www.marisheibley.com/">Lagavulin</a></p>
 						</div>
 				</div>
 					<div class="blog_post">
 						<a href="http://www.marisheibley.com/"><img src="images/blog3.jpg"/></a>
 							<div class="blog_text">
-								<h3><a href="http://www.marisheibley.com/">Look Book</a></h3>
-								<p><a href="http://www.marisheibley.com/">edona Sunset</a></p>
+								<h3><a href="http://www.marisheibley.com/">Scotch</a></h3>
+								<p><a href="http://www.marisheibley.com/">Oban</a></p>
 							</div>
 					</div>
 							<div class="blog_post">
 									<a href="http://www.marisheibley.com/"><img src="images/blog4.jpg"/></a>
 									<div class="blog_text">
-										<h3><a href="http://www.marisheibley.com/">Look Book</a></h3>
-										<p><a href="http://www.marisheibley.com/">Sedona Sunset</a></p>
+										<h3><a href="http://www.marisheibley.com/">Bourbon</a></h3>
+										<p><a href="http://www.marisheibley.com/">Bulleit</a></p>
 									</div>
 								</div>
 								<div class="blog_post">
 									<a href="http://www.marisheibley.com/"><img src="images/blog5.jpg"/></a>
 										<div class="blog_text">
-											<h3><a href="http://www.marisheibley.com/">Look Book</a></h3>
-											<p><a href="http://www.marisheibley.com/">Sedona Sunset</a></p>
+											<h3><a href="http://www.marisheibley.com/">Japanese Whisky</a></h3>
+											<p><a href="http://www.marisheibley.com/">Hibiki 12</a></p>
 										</div>
 								</div>
 									<div class="blog_post">
 										<a href="http://www.marisheibley.com/"><img src="images/blog6.jpg"/></a>
 											<div class="blog_text">
-												<h3><a href="http://www.marisheibley.com/">Look Book</a></h3>
-												<p>S<a href="http://www.marisheibley.com/">edona Sunset</a></p>
+												<h3><a href="http://www.marisheibley.com/">Scotch</a></h3>
+												<p><a href="http://www.marisheibley.com/">Macallan</a></p>
 											</div>
 									</div>
 				</div>
