Fixed copyright symbol

--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
 											</div>
 									</div>
 				</div>
+
 		<footer>
-			<p id="copyright">© 2013 for the makers</p>
+			<p id="copyright">&#169 2013 for the makers</p>
 			<p id="footer_nav">about | terms of service | how it works | faq</p>
 		</footer>
 			
