--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 	<head>
 		<title>For The Makers</title>
 		<link rel="stylesheet" href="main.css"/>
-	</head>
+		<script> src='script.js'</script>
+		</head>
 	<body>
 		<header>
+			<form>
+				<input type="text" name="search">
+			</form>
 			<ul>
 				<li><a href="http://www.marisheibley.com/">how it works</li>
 				<li><a href="http://www.marisheibley.com/">about us</li>
