--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>For The Makers</title>
 		<link rel="stylesheet" href="main.css"/>
-		<script> src='script.js'</script>
+		<script src='script.js'></script>
 		</head>
 	<body>
 		<header>
